--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
-<html>
-{#jishugang#}
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💗</title>
- 
+
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
       html,
       body {
         height: 100%;
-        padding: 0;
-        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background: #000;
+        overflow: hidden;
       }
+
       canvas {
         position: absolute;
         width: 100%;
         height: 100%;
-        animation: anim 1.5s ease-in-out infinite;
-        -webkit-animation: anim 1.5s ease-in-out infinite;
-        -o-animation: anim 1.5s ease-in-out infinite;
-        -moz-animation: anim 1.5s ease-in-out infinite;
+        display: block;
       }
+
       #name {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        margin-top: -20px;
-        font-size: 46px;
+        font-size: 10vw; /* 自适应字体大小 */
         color: #ea80b0;
+        text-align: center;
+        font-family: 'Arial', sans-serif;
       }
+
       @keyframes anim {
         0% {
           transform: scale(0.8);
@@ -101,11 +110,11 @@
       }
     </style>
   </head>
+
   <body>
     <canvas id="pinkboard"></canvas>
-    <!-- 在下面加名字 -->
-     <div id="name" style="color: pink;">biu</div>
- 
+    <div id="name">biu</div>
+
     <script>
       var settings = {
         particles: {
@@ -116,6 +125,7 @@
           size: 30,
         },
       };
+
       (function () {
         var b = 0;
         var c = ["ms", "moz", "webkit", "o"];
@@ -142,6 +152,7 @@
           };
         }
       })();
+
       var Point = (function () {
         function Point(x, y) {
           this.x = typeof x !== "undefined" ? x : 0;
@@ -166,6 +177,7 @@
         };
         return Point;
       })();
+
       var Particle = (function () {
         function Particle() {
           this.position = new Point();
@@ -205,12 +217,13 @@
         };
         return Particle;
       })();
+
       var ParticlePool = (function () {
         var particles,
           firstActive = 0,
           firstFree = 0,
           duration = settings.particles.duration;
- 
+
         function ParticlePool(length) {
           particles = new Array(length);
           for (var i = 0; i < particles.length; i++)
@@ -255,6 +268,7 @@
         };
         return ParticlePool;
       })();
+
       (function (canvas) {
         var context = canvas.getContext("2d"),
           particles = new ParticlePool(settings.particles.length),
@@ -282,7 +296,7 @@
               settings.particles.size / 2 +
               (point.x * settings.particles.size) / 350;
             point.y =
-              settings.particles.size / 2 -
+              settings.particles.size / 2 - 
               (point.y * settings.particles.size) / 350;
             return point;
           }
@@ -302,6 +316,7 @@
           image.src = canvas.toDataURL();
           return image;
         })();
+
         function render() {
           requestAnimationFrame(render);
           var newTime = new Date().getTime() / 1000,
@@ -322,6 +337,7 @@
           particles.update(deltaTime);
           particles.draw(context, image);
         }
+
         function onResize() {
           canvas.width = canvas.clientWidth;
           canvas.height = canvas.clientHeight;
@@ -332,7 +348,6 @@
           render();
         }, 10);
       })(document.getElementById("pinkboard"));
- 
     </script>
   </body>
 </html>
