--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 10vw; /* 自适应字体大小 */
+        font-size: 3vw; /* 自适应字体大小 */
         color: #ea80b0;
         text-align: center;
         font-family: 'Arial', sans-serif;
@@ -113,7 +113,7 @@
 
   <body>
     <canvas id="pinkboard"></canvas>
-    <div id="name">biu</div>
+    <div id="name">❤️晶晶❤️</div>
 
     <script>
       var settings = {
